css/screen.css
/* Global Reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    /*border-collapse: collapse;*/
    border-spacing: 0;
}
/* Screen */
body { background: #fff; font-family: Verdana, Arial; font-size: 12px; }

#container { margin: 0px auto; overflow: hidden; position: relative; width: 900px; }
	#header { margin: 24px 0 12px 0; }
	#header a { color: #c80000; display: block; float: left; font-size: 14px; font-weight: bold; line-height: 58px; margin: 0 8px; text-decoration: none; }
	#header a:hover { text-decoration: underline; }
	
	#content { margin: 8px 0; }

